# alexandria

./: Cargo.toml
src/: main.rs
test_library/: file.txt
test_library/folder/: file2
test_library/folder/folder2/: file3
test_library/spacey folder/folder:with:colons/: file:with:colons.md
test_library/spacey folder/when-the-📂/: when-the-📄.md
