[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_tree_view = "0.8.0"
cursive-tabs = "0.7.0"
#cursive-markup = "0.3.0"

[dependencies.cursive]
version = "0.19.0"
#features = ["markdown"]